udpated: newton fixed & bg fixed

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,15 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.min.css"
+      integrity="sha384-KiWOvVjnN8qwAZbuQyWDIbfCLFhLXNETzBQjA/92pIowpC0d2O3nppDGQVgwd2nB"
+      crossorigin="anonymous"
+    />
     <title>MatheMagics</title>
   </head>
-  <body>
+  <body class="dark:bg-dark bg-white">
     <div id="root"></div>
   </body>
 </html>
